ckanext/dgu/theme/public/css/dgu.css
/* ... */
.resources > .search-result .result-url {
  display: none;
}

/* Resource-list */
/* ------------- */
.resource-list {
  list-style-type: none;
  padding: 0;
  margin: 0 0 15px 0;
}
.resource-list > li {
  background: #fff;
  border: 0;
  border: 1px solid #eee;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right: 0;
  font-weight: bold;
  display: block;
  padding: 0;
  color: #333;
  height: 29px;
  position: relative;
}
.resource-list > li.last-child {
  border-bottom-color: transparent;
}
.resource-list > li > .trimmed-text {
  overflow: hidden;
  padding-left: 10px;
  white-space: nowrap;
  padding-top: 5px;
  position: absolute;
  width: 375px;
}
.resource-list > li > .btn,
.resource-list > li > .btn-group {
  margin-left: 4px;
  float: right;
}
.resource-list > li > .format-box {
  position: absolute;
  right: 194px;
  top: 2px;
  background: #fff;
  box-shadow: -2px 0 2px #fff;
}
.resource-list .dropdown-menu a.disabled {
  color: #666;
}
.resource-list .dropdown-menu a.disabled:hover {
  background: transparent;
}
.gemini-resource-list > li > .btn {
  width: 80px;
}
.gemini-resource-list > li > .format-box {
  right: 120px;
}


/* Package Edit Form */
/* ----------------- */
#package-edit ul.nav,
#package-edit ul.nav li {
  width: 210px;
  margin-right: -1px;
  background: #fff;
}
#package-edit .tab-content > fieldset {
  border: 1px solid #DDD;
  padding: 20px;
  min-height: 320px;
}
#package-edit .tab-content {
  display: block;
  width: auto;
}
#section-description-field p {
  margin-top: 10px;
}

#package-edit .nav-backnext {
  float: right;
}
div#form-tabs #disclaimer p,
div#form-tabs #disclaimer input {
  display: inline-block;
  *display: inline;
  zoom: 1;
  max-width: 400px;
  vertical-align: top;
  margin-left: 10px;
}

div#form-tabs a.disabled {
  color: #a6a6a6;
  cursor: default;
}

div#form-tabs a.disabled:hover {
  background-color: transparent;
  cursor: default;
  border-color: transparent;
}

.fieldset_button_error {
  background: transparent url(../images/icons/error.png) right center no-repeat;
}

p.field_error {
  background: transparent url(../images/icons/error.png) left center no-repeat;
  padding-left: 20px;
  color: #FF6666;
  display: inline;
}

input.display-error-inside.field_error {
  padding-left: 20px;
  background: transparent url(../images/icons/error.png) left center no-repeat;
}
.hints {
  font-style: italic;
  color: #666;
  margin-top: 3px;
  margin-bottom: 0;
}
.instructions.basic {
  margin: 3px 0;
  line-height: 14px;
}

.instructions.further {
  font-size: 11px;
  line-height: 12px;
  color: #666;
  margin: 3px 0 5px 0;
  width: 80%;
}

/* History page */
/* ------------ */
.history-table tr.selected td {
  background: #ffa !important;
}
.history-table td.compare {
  text-align: center;
  width: 50px;
}
.history-table {
  margin-top: 15px;
}

/* Publisher form */
/* -------------- */

ul.button-row {
  margin-bottom: 5px;
}
ul.button-row li {
  display: inline;
  margin-right: 10px;
}

/* Publishers page */
/* -------------- */

hr.extras-divider {
  border: none;
  border-bottom: 1px dashed #ddd;
  width: 65%;
}
span.extras-label {
  display: inline-block;
  min-width: 50px;
  text-align: right;
}
#sub-publishers li.collapsed {
  display: none;
}
div#publisher-tree {
  background-color: white;
  overflow: auto;
}
.tab-pane .pagination-alphabet a { 
  padding: 0 5px;
}
table.groups th { 
  text-align: left;
}
#publishersearch .form-search input[type="text"] {
  /* Override search form size */
  width: 200px;
}
.jstree ul {
  list-style-image: none;
}
.jstree.jstree-overflows {
  overflow: visible !important;
}
.jstree.jstree-overflows li {
  overflow: hidden;
}
.jstree.jstree-overflows li:hover {
  overflow: visible;
}
.jstree.jstree-overflows li a {
  background: #fff !important;
}


/* Publisher read page */
/* ------------------- */

#dataset-search-thin input[type="text"] {
  width: 460px;
}
.admin-button {
  padding: 8px;
  text-align: center;
}

/* Harvest pages */
/* ------------- */

body.harvest #content{
    width: 95%;
}

#show-inactive-sources-content{
    width: 180px !important;
}

#show-inactive-sources-content label{
    margin-top: 0 !important;
}

.harvest-source-title,
.harvest-source-config{
    display:none;
}

/* Tag page */
/* -------- */

.pagination-alphabet a { 
        padding: 0 10px;
}
.tags ul li { 
 display: inline;
}
.tags li { 
  border: 1px;
}

/* Comments */
/* -------- */


.comment {
  position: relative;
}
.comment h3 {
  margin-bottom: 7px;
}
.comment .submitted {
  font-size: 11px;
  margin-bottom: 17px;
}
.comment .user-picture {
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 3px;
  border: 1px solid #ccc;
  -webkit-box-shadow: 0 0 3px #aaa;
  -moz-box-shadow: 0 0 3px #aaa;
  box-shadow: 0 0 3px #aaa;
}
.comment .links {
  text-align: right;
  list-style-type: none;
  margin: 0;
}

.indented {
  margin-left: 3px;
  border-left: 2px dashed #ccc;
  padding-left: 25px;
}

div.new-comment-link {
  background-color: #42474B;
  -moz-border-bottom-left-radius: 5px;
  -webkit-border-bottom-left-radius: 5px;
  border-bottom-left-radius: 5px;
  -moz-border-bottom-right-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
  border-bottom-right-radius: 5px;
  margin: 0 0 20px 0;
  min-height: 28px;
  padding: 12px;
}

div.new-comment-link a { 
  float: right;
}

div.comment-content h3 a {
  color: #000;
}

/* Autocomplete dialog */
ul.ui-autocomplete {
    -moz-box-shadow: 0 2px 9px #777;
    -webkit-box-shadow: 0 2px 9px #777;
    box-shadow: 0 2px 9px #777;
}
ul.ui-autocomplete li a {
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    color: #555;
    font-size: 13px;
}
ul.ui-autocomplete li a:hover {
    cursor: pointer;
}
ul.ui-autocomplete li a.ui-state-hover{
    background: #9D2;
    border-color: #690;
}

/* Hover-for-help */
.star-rating > .tooltip {
  display: none;
}
.star-rating .inline-icon {
  padding: 0;
}
/* ... */

